--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adminjs/upload",
+  "name": "@geekyayush/adminjs-upload",
   "version": "4.0.0",
   "type": "module",
   "exports": {
